--- a/src/styles/viewer.scss
+++ b/src/styles/viewer.scss
@@ -13,6 +13,9 @@
   background-size: 20px 20px;
   background-image: linear-gradient(to right, grey 1px, transparent 1px),
     linear-gradient(to bottom, grey 1px, transparent 1px);
+  height: calc(100vh - 64px);
+  height: calc(var(--vh, 1vh) * 100 - 64px);
+  width: 100vw;
 }
 @keyframes basemap {
   0%,
